Fixed training img misplacement on mobile

--- a/assets/css/oncase-global.css
+++ b/assets/css/oncase-global.css
@@ -842,12 +842,11 @@ img.oncase-desaturated-img{
 
 
 .oncase-campus-image  img{
-  height:300px;
+  width:100%;
 }
 
 .oncase-campus-image{
     width:100%;
-    height:300px;
 
 
     border-bottom:solid 1px #ccc;
